# rainbow-package

./: README.md  pyproject.toml
src/rainbow/: __init__.py  main.py
