[tool.poetry]
name = "rainbow_prompt"
version = "0.0.3"
description = "This package aims to facilitate and simplify the use of colors in the prompt with python."
authors = ["David Marques <davidmarques99@hotmail.com>"]
readme = "README.md"
packages = [{include = "rainbow", from = "src"}]

[project.urls]
Homepage = "https://github.com/davidmarquescoder/rainbow-package"
Issues = "https://github.com/davidmarquescoder/rainbow-package/issues"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
